--- a/html/asc.html
+++ b/html/asc.html
@@ -51,10 +51,11 @@
                 <div class="frontenddiv">
                         <h3>Front End Technologies</h3>
                         <div class="skillsdivgrid">
-                            <p>HTML5</p>
-                            <p>CSS3</p>
+                            <p>HTML</p>
+                            <p>CSS</p>
                             <p>JS</p>
                             <p>JQUERY</p>
+                            <p>REACTJS</p>
                         </div>
                 </div>
                 <div class="backenddiv">
@@ -90,7 +91,6 @@
                 </div>
                 <div class="extrasdiv">
                     <p>joshiabhishek932000@gmail.com</p>
-                    <p>6353266085</p>
                     <p>Gujarat, India</p>
                 </div>
 
